--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "typescript": "^5.4.5"
   }
 }
